infra/k8s/apps/media/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: media
  labels:
    project: media
